============
Next Release
============

Bug fixes:

  * mongoc_collection_update_many and mongoc_collection_delete_many would fail
    with the URI option retryWrites=true.
  * Remove timestamp from uninstall scripts to permit reproducible build.

mongo-c-driver 1.13.0
=====================

It is my pleasure to announce the MongoDB C Driver 1.13.0.

Features:

  * Report a new error code, MONGOC_ERROR_GRIDFS_CORRUPT, when a chunk larger
    than chunkSize is detected. Before, the driver had crashed with an assert.
  * Restructure of install directory. All mongoc headers are under mongoc/
    and all bson headers are under bson/. The preferred way of including the
    headers are mongoc/mongoc.h and bson/bson.h respectively.
    Forwarding headers in the root are provided for backwards compatibility.
  * The default CMake build type had been unspecified, now it is RelWithDebInfo.
  * Support LibreSSL 2.7+.

Bug fixes:

  * mongoc_collection_replace_one is now a correctly exported symbol.
  * Fix multiple issues with readConcern and writeConcern inheritance.
  * Fix rare crash with mongodb+srv URIs on Windows.
  * mongoc_gridfs_create_file_from_stream ignored errors while writing chunks
    to the server.
  * The following functions should not have taken a "bypassDocumentValidation"
    option in bson_t *opts, the option is now prohibited:
    - mongoc_bulk_operation_insert_with_opts
    - mongoc_bulk_operation_update_one_with_opts
    - mongoc_bulk_operation_update_many_with_opts
    - mongoc_bulk_operation_replace_one_with_opts
  * The heartbeat-succeeded and heartbeat-failed events (part of SDAM
    Monitoring) had uninitialized "duration" fields, they are now set correctly.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Roberto C. Sánchez
  * Kevin Albertson
  * Henrik Edin
  * Spencer McKenney
  * Jeremy Mikola
  * Evgeni Dobranov
  * Tomas Mozes
  * Derick Rethans
  * Gustaf Neumann
  * Jeroen