@@ -7,6 +7,8 @@ Bug fixes:
   * mongoc_collection_update_many and mongoc_collection_delete_many would fail
     with the URI option retryWrites=true.
   * Remove timestamp from uninstall scripts to permit reproducible build.
+  * Add missing header files to the release tarball to fix compilation when
+    configuring with ENABLE_SASL=GSSAPI.
 
 mongo-c-driver 1.13.0
 =====================
